--- a/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
@@ -1,4 +1,4 @@
-﻿@model WazaWare.co.za.Models.ProductsViewModel
+﻿@model WazaWare.co.za.Models.ViewModels
 <!-- Header Inner -->
 <div class="header-inner">
 	<div class="container">
