--- a/WebScrapper_Prototype/Views/Shop/Products.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@using WazaWare.co.za.Controllers;
 @using X.PagedList.Mvc.Core;
 @using X.PagedList;
-@model WazaWare.co.za.Models.ProductsViewModel
+@model WazaWare.co.za.Models.ViewModels
 @{
 	ViewData["Title"] = "Products";
 }
